# FrameProject

./: .gitignore  CMakeLists.txt  FrameResolver.cpp  FrameResolver.h  HowToCompile.txt  README.md  Report.cpp  Report.h  main.cpp
CSV/: CSVReader.cpp  CSVReader.h  FileNotFoundException.cpp  FileNotFoundException.h  IDataReader.h
Math/: InterSection.cpp  InterSection.h  Rectangle.cpp  Rectangle.h
Repositories/: CandidatesRepository.cpp  CandidatesRepository.h  GroundTruthRepository.cpp  GroundTruthRepository.h
Repositories/Models/: Candidate.cpp  Candidate.h  GroundTruth.cpp  GroundTruth.h
